# aseqmatrix

./: .gitignore  Cargo.toml  LICENSE  README.md  main.lua  run.sh
src/: config.rs  error.rs  graphics.rs  main.rs  skin.rs  theme.rs
themes/amber/: theme.toml
themes/analogue/: theme.toml
themes/breeze/: theme.toml
themes/breeze-dark/: theme.toml
themes/flat-blue/: theme.toml
themes/memphis/: theme.toml
themes/orbital/: theme.toml
themes/test/: theme.toml
