[package]
name = "aseqmatrix"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
alsa = "0.6.0"
dirs = "4.0.0"
sdl2 = { version = "0.34", features = ["gfx", "image"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[package.metadata.appimage]
assets = ["themes"]
auto_link = true
auto_link_exclude_list = [
    "ld-linux*",
    "libc.so*",
    "libdl.so*",
    "libgcc_s.so*",
    "libm.so*",
    "libpthread.so*",
]
